--- a/NastyaKupcovakt-42-21/appsettings.Development.json
+++ b/NastyaKupcovakt-42-21/appsettings.Development.json
@@ -1,8 +1,24 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "NLog": {
+    "internalLogLevel": "Info",
+    "internalLogFile": "c:\\Users\\nkupc\\source\\repos\\nastya-kupcova-kt-42-21\\internal-nlog.txt",
+    "extensions": [
+      { "assembly": "NLog.Extensions.Logging" },
+      { "assembly": "NLog.Web.AspNetCore" }
+    ],
+    "targets": {
+      "my-file": {
+        "type": "File",
+        "fileName": "c:\\Users\\nkupc\\source\\repos\\nastya-kupcova-kt-42-21\\logfile-${shortdate}.log",
+        "layout": "${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|$ {logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action:${aspnet-mvc-action}"
+      }
+    },
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Error",
+        "writeTo": "my-file"
+      }
+    ]
   }
 }
