--- a/NastyaKupcovakt-42-21/appsettings.Development.json
+++ b/NastyaKupcovakt-42-21/appsettings.Development.json
@@ -10,7 +10,7 @@
       "my-file": {
         "type": "File",
         "fileName": "c:\\Users\\nkupc\\source\\repos\\nastya-kupcova-kt-42-21\\logfile-${shortdate}.log",
-        "layout": "${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|$ {logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action:${aspnet-mvc-action}"
+        "layout": "${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action:${aspnet-mvc-action}"
       }
     },
     "rules": [
@@ -20,5 +20,8 @@
         "writeTo": "my-file"
       }
     ]
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-AFELP10U;DataBase=1Student;User Id=LAPTOP-AFELP10U\\nkupc;Trusted_Connection=True;Encrypt=False;MultipleActiveResultSets=true"
   }
 }
